fix:alignment issues

--- a/SwiggyClone/assets/css/main.css
+++ b/SwiggyClone/assets/css/main.css
@@ -673,6 +673,7 @@ header {
 .landing-page-root .top {
     display: flex;
     padding-left: 20px;
+    
     /* justify-content: space-between; */
 }
 
@@ -680,7 +681,7 @@ header {
     margin-top: 70px;
     flex: 7;
     margin-left: 10px;
-    width: 50%;
+    width: 50%; 
 }
 
 .landing-page-root .toppest {
@@ -719,7 +720,7 @@ header {
 .landing-page-root .topright {
     flex: 6;
     margin-left: 30px;
-    width: 50%;
+    /* width: 50%; */
 
 }
 
@@ -793,7 +794,7 @@ header {
 .landing-page-root .topPlace1 {
     background-color: white;
     color: gray;
-    margin: 5px;
+    /* margin: 5px; */
     font-weight: bold;
     font-size: medium;
 }
@@ -801,7 +802,7 @@ header {
 .landing-page-root .topPlace2 {
     background-color: white;
     color: rgb(183, 181, 181);
-    margin: 5px;
+    /* margin: 5px; */
     font-size: medium;
 
 }
@@ -925,7 +926,7 @@ header {
 
 button {
     padding: 10px 20px;
-}
+} 
 
 .modal {
     position: fixed;
@@ -1032,10 +1033,10 @@ button {
     margin-bottom: 10px;
 }
 
-input,
+/* input,
 button {
     width: 100%;
-}
+} */
 
 button {
     background-color: #007bff;
